# gini-knowledge-engine-v2

./: .gitignore  Dockerfile  Dockerfile_bkp  README.md  main.py  pyproject.toml  requirements.txt
agent/: README.md
agent/component/: exesql.py
api/: ragflow_server.py  settings.py
api/apps/: api_app.py  conversation_app.py  dialog_app.py  document_app.py  file_app.py  kb_app.py  llm_app.py
api/db/: runtime_config.py
api/db/services/: common_service.py  dialog_service.py  file_service.py  knowledgebase_service.py  llm_service.py  user_service.py
conf/: service_conf.yaml
deepdoc/: README.md
deepdoc/parser/resume/entities/: corporations.py  schools.py
docker/: .env  docker-compose-base.yml  docker-compose.yml  entrypoint.sh  infinity_conf.toml  launch_backend_service.sh  service_conf.yaml.template
docker/nginx/: ragflow.conf
example/sdk/: dataset_example.py
rag/: settings.py
rag/llm/: embedding_model.py
rag/utils/: es_conn.py  infinity_conn.py  minio_conn.py  redis_conn.py
sdk/python/: pyproject.toml
sdk/python/ragflow_sdk/modules/: agent.py
sdk/python/test/test_sdk_api/: t_agent.py  t_session.py
web/: .umirc.ts  nginx.conf  package.json
web/src/utils/: api.ts
