[project]
name = "ragflow-sdk"
version = "0.16.0"
description = "document flow."
authors = [
    { name = "Test", email = "yuzhichang@.com" }
]
license = { text = "Apache License, Version 2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests>=2.30.0,<3.0.0",
    "beartype>=0.18.5,<0.19.0",
    "pytest>=8.0.0,<9.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0"
]
